[gd_scene load_steps=4 format=2]

[ext_resource path="res://Minigames/Shooting Range/Shooting_Range_Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/Portraits/rogue.png" type="Texture" id=2]
[ext_resource path="res://Minigames/End_MiniGame.tscn" type="PackedScene" id=3]

[node name="Shooting_Range_Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Bow_Position" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 1890, 1060 )

[node name="Sprite" type="Sprite" parent="Bow_Position"]
position = Vector2( -19.9999, -41.75 )
scale = Vector2( 5.33334, 7.42308 )
texture = ExtResource( 2 )

[node name="Start_Timer" type="Timer" parent="."]
pause_mode = 2
wait_time = 4.0
one_shot = true
autostart = true

[node name="Bow_Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Shot_Timer" type="Timer" parent="."]
one_shot = true

[node name="Target_Timer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="End_Timer" type="Timer" parent="."]
wait_time = 180.0
one_shot = true
autostart = true

[node name="GO" type="Label" parent="."]
visible = false
margin_left = 750.0
margin_top = 50.0
margin_right = 775.0
margin_bottom = 64.0
rect_scale = Vector2( 10, 10 )
text = "GO!"

[node name="Hits_counter" type="Label" parent="."]
margin_left = 1360.0
margin_top = 20.0
margin_right = 1394.0
margin_bottom = 34.0
rect_scale = Vector2( 10, 10 )
text = "Hits: "

[node name="Time" type="Label" parent="."]
margin_left = 80.0
margin_top = 40.0
margin_right = 88.0
margin_bottom = 54.0
rect_scale = Vector2( 10, 10 )

[node name="Quit" type="Button" parent="."]
margin_left = 10.0
margin_top = 970.0
margin_right = 50.0
margin_bottom = 990.0
rect_scale = Vector2( 5, 5 )
text = "Quit"

[node name="End_MiniGame" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="timeout" from="Start_Timer" to="." method="_on_Start_Timer_timeout"]
[connection signal="timeout" from="Bow_Timer" to="." method="_on_Bow_Timer_timeout"]
[connection signal="timeout" from="Target_Timer" to="." method="_on_Target_Timer_timeout"]
[connection signal="timeout" from="End_Timer" to="." method="_on_End_Timer_timeout"]
[connection signal="button_down" from="Quit" to="." method="_on_Quit_button_down"]
